{{$NEXT}}

2.37    2019-09-11

- This release is based on version 2019c of the Olson database. This release
  includes contemporary changes for Fiji and Norfolk Island.


2.36    2019-07-01

- This release is based on version 2019b of the Olson database. This release
  includes contemporary changes for Brazil and Palestine.


2.35    2019-04-21

- Handle "infinity" as a representation of infinite values in serialized
  objects. On Solaris we end up with "infinity" and "-infinity" as opposed to
  just "inf" and "-inf". Fixed by Andrew Paprocki. GH #36.


2.34    2019-03-26

- This release is based on version 2019a of the Olson database. This release
  includes contemporary changes for Palestine and Metlakatla, Alaska.


2.23    2018-12-30

- This release is based on version 2018i of the Olson database. This release
  includes contemporary changes for São Tomé and Príncipe.


2.22    2018-12-29

- This release is based on version 2018h of the Olson database. This release
  includes contemporary changes for Morocco, Kazakhstan, and Iran.


2.21    2018-10-27

- This release is based on version 2018g of the Olson database. This release
  includes contemporary changes for Morocco.


2.20    2018-10-18

- Added more documentation on how local time zones work, and a warning to set
  $ENV{TZ} if you're writing tests for code that tries to use the local time
  zone.

- This release is based on version 2018f of the Olson database. This release
  includes contemporary changes for Russia (Volograd), Fiji, and Chile.


2.19    2018-05-13

- This release is based on version 2018e of the Olson database. This release
  includes contemporary changes for North Korea.


2.18    2018-03-23

- This release is based on version 2018d of the Olson database. This release
  includes contemporary changes for Palestine and Casey Station.


2.17    2018-01-23

- This release is based on version 2018b of the Olson database. This release